--- a/index.html
+++ b/index.html
@@ -613,13 +613,13 @@ July 22, 2001.
   <a href="https://incommon.org/academy/webinars/">IAM Online</a>,
   July 27, 2021.
   <a href="https://youtu.be/7F-q2HRRGUE">[video]</a>
-  <a href="https://docs.google.com/presentation/d/1Mtw76fFZABJ43dqb1vDWKdm9R65Y2FUv7XjJkhyABG4/edit?usp=sharing">[slides]</a>
+  <a href="202107-cilogon-iamonline.pdf">[slides]</a>
 <li>Cybersecurity Careers Panel,
   <a href="https://pearc.acm.org/pearc21/student-program/pearc21-cybersecurity-careers-panel/">PEARC21
   Student Program</a>,
   July 18, 2021.
   <a href="https://youtu.be/ReypK3Bgdts">[video]</a>
-  <a href="https://docs.google.com/presentation/d/1mtlvu7fV5rhuX7y4TzdcKvnEo_XO6x_cSzYFRebA-Gs/edit?usp=sharing">[slides]</a>
+  <a href="PEARC21CybersecurityCareersPanelBasney.pdf">[slides]</a>
 <li>Town Hall Discussion: Authorization and Identity,
   <a href="https://agenda.hep.wisc.edu/event/1579/contributions/23054/">HTCondor
   Week 2021</a>, May 24, 2021.  
@@ -661,6 +661,8 @@ July 22, 2001.
   <a href="https://indico.cern.ch/event/936993/overview">HTCondor
   Workshop Autumn 2020</a>,
   September 25, 2020.
+  <a href="https://videos.cern.ch/record/2741083">[video]</a>
+  <a href="20200925-Basney.pdf">[slides]</a>
 <li>Community Survey Results from the Trustworthy Data Working Group,
   NSF Cybersecurity Summit,
   September 24, 2020.
@@ -684,6 +686,7 @@ July 22, 2001.
   <a href="https://indico.rnp.br/event/13/">28th TAGPMA Face-to-Face
     Meeting</a>,
   December 13, 2019.  
+  <a href="20191213-Assurance4JWT.pdf">[slides]</a>
 <li>Peer Review of REFEDS Assurance Adoption,
   <a href="https://indico.rnp.br/event/13/">28th TAGPMA Face-to-Face
     Meeting</a>,
@@ -701,6 +704,7 @@ July 22, 2001.
   <a href="https://indico.cern.ch/event/834658/">mini-FIM4R at
     Fermilab</a>,
   September 12, 2019.
+  <a href="20190912-cilogon-fim4r-basney.pdf">[slides]</a>
 <li>Panel: Securing your Infrastructure in a Changing Landscape: An
   Engineering Perspective,
   Securing Research Data Workshop,
@@ -715,25 +719,26 @@ July 22, 2001.
 <li>Panel: Federal agency support and cyberinfrastructure,
   <a href="https://sites.duke.edu/cyberrisk/">CyberRISK Workshop for Minority Serving Institutions (MSIs)</a>,
   July 11, 2019.
-<li><a href="https://indico4.twgrid.org/indico/event/8/session/10/contribution/24">CILogon:
+<li>CILogon:
     Enabling Federated Identity and Access Management for Scientific
-    Collaborations</a>,
-  <a href="https://indico4.twgrid.org/indico/event/8/">International
-  Symposium on Grids &amp; Clouds (ISGC)</a>,
+    Collaborations,
+  International
+  Symposium on Grids &amp; Clouds (ISGC),
   April 4, 2019.
-<li><a href="https://indico4.twgrid.org/indico/event/8/session/5/contribution/184">CILogon,
+<li><CILogon,
     SciTokens and Grid Community Toolkits</a>,
-  <a href="https://indico4.twgrid.org/indico/event/8/session/5/#20190401">IGTF
-  All-Hands Meeting</a>,
+  IGTF
+  All-Hands Meeting,
   April 1, 2019.
 <li><a href="https://speakerdeck.com/jbasney/trusted-cis-approach-to-security-for-open-science-projects">Trusted CI's approach to security appropriate for open science
   projects</a>,
 <a href="https://indico.cern.ch/event/775478/">13th FIM4R Workshop: Federated Identity Management for Research Collaborations</a>,
 February 11, 2019.
-<li><a href="https://youtu.be/d1BkIY_qf90">Authorizing Access to
-    Science Gateway Resources</a>,
-<a href="https://sciencegateways.org/-/authorizing-access-to-science-gateway-resources">Science Gateways Community Institute Webinar</a>,
+<li>Authorizing Access to
+    Science Gateway Resources,
+Science Gateways Community Institute Webinar,
 January 9, 2019.
+  <a href="https://youtu.be/d1BkIY_qf90">[video]</a>
 <li><a href="https://speakerdeck.com/jbasney/identity-management-for-research-collaborations">Identity Management for Research Collaborations</a>,
 MAGIC at SC18,
 November 14, 2018.
@@ -765,6 +770,7 @@ May 10, 2018.
 <li><a href="https://meetings.internet2.edu/2018-global-summit/detail/10004992/">Adopting AARC Guidelines</a>,
 Internet2 Global Summit,
 May 9 2018.
+  <a href="20180509-basney-xsede.pdf">[slides]</a>
 <li><a href="https://meetings.internet2.edu/2018-global-summit/detail/10004991/">Cybersecurity for Research on Campus: Not Just HIPAA & FISMA</a>,
 Internet2 Global Summit,
 May 7, 2018.
@@ -774,9 +780,11 @@ April 11, 2018.
 <li><a href="https://indico.cern.ch/event/681873/#15-fim-needsplans-for-the-lsst">FIM needs/plans for the LSST project</a>,
 12th FIM4R Workshop: Federated Identity Management for Research Collaborations,
 February 5, 2018.
+  <a href="FIM4R_Feb_2018_LSST_FIM_Needs.pdf">[slides]</a>
 <li><a href="https://indico.nikhef.nl/event/1076/">CILogon & SciTokens: OIDC/OAuth Federation</a>,
 42nd EUGridPMA Prague meeting,
 January 22, 2018.
+  <a href="CILogon__SciTokens_-_OIDC_Fed_-_EUGridPMA_20180122.pdf">[slides]</a>
 <li><a href="https://www.youtube.com/watch?v=73AdwKDvPnM">CILogon 2.0: An Integrated IAM Platform for Science</a>,
 IAM Online,
 January 17, 2018.
@@ -802,62 +810,60 @@ March 24, 2017.
 <li><a href="https://www.slideshare.net/jbasney/cilogon-agu16">CILogon 2.0</a>,
 AGU Fall Meeting,
 December 14, 2016.
-<li><a href="http://www.slideshare.net/jbasney/sc16">CILogon 2.0</a>,
+<li><a href="https://www.slideshare.net/jbasney/sc16">CILogon 2.0</a>,
 Middleware And Grid Interagency Coordination (MAGIC) session at SC16,
 November 15, 2016.
-<li><a href="http://www.slideshare.net/jbasney/fedushare-techex16">FeduShare Update</a>,
+<li><a href="https://www.slideshare.net/jbasney/fedushare-techex16">FeduShare Update</a>,
 Internet2 Technology Exchange,
 September 28, 2016.
-<li><a href="http://www.slideshare.net/jbasney/cilogontechex2016">CILogon 2.0</a>,
+<li><a href="https://www.slideshare.net/jbasney/cilogontechex2016">CILogon 2.0</a>,
 Internet2 Technology Exchange,
 September 26, 2016.
-<li><a href="http://www.slideshare.net/jbasney/2016-igtf">Trusting External Identity Providers for Global Research Collaborations - Mind the Gap!</a>,
+<li><a href="https://www.slideshare.net/jbasney/2016-igtf">Trusting External Identity Providers for Global Research Collaborations - Mind the Gap!</a>,
 IGTF All Hands Meeting,
 September 19, 2016.
-<li><a href="http://www.slideshare.net/jbasney/cybersecurity-for-conservation">Cybersecurity for Conservation</a>,
+<li><a href="https://www.slideshare.net/jbasney/cybersecurity-for-conservation">Cybersecurity for Conservation</a>,
 Conference on Conservation, Computation, and Criminology,
 July 7, 2016.
-<li><a href="http://www.slideshare.net/jbasney/ctsc-tnc16">CTSC: Securing NSF Research</a>,
+<li><a href="https://www.slideshare.net/jbasney/ctsc-tnc16">CTSC: Securing NSF Research</a>,
 TNC16,
 June 15, 2016.
-<li><a href="http://www.slideshare.net/jbasney/cilogon-20-at-2016-internet2-global-summit">CILogon 2.0</a>,
+<li><a href="https://www.slideshare.net/jbasney/cilogon-20-at-2016-internet2-global-summit">CILogon 2.0</a>,
 Internet2 Global Summit,
 May 17, 2016.
-<li><a href="http://www.slideshare.net/jbasney/saml-security-contacts">Security Contacts in SAML Metadata</a>,
+<li><a href="https://www.slideshare.net/jbasney/saml-security-contacts">Security Contacts in SAML Metadata</a>,
 <a href="https://www.terena.org/activities/ism/wise-ws/">WISE Workshop</a>,
 October 20, 2015.
-<li><a href="http://www.slideshare.net/jbasney/fedushare-techex15">FeduShare: A User Managed Collaboration Framework</a>,
+<li><a href="https://www.slideshare.net/jbasney/fedushare-techex15">FeduShare: A User Managed Collaboration Framework</a>,
 <a href="https://meetings.internet2.edu/2015-technology-exchange/detail/10003961/">Internet2 Technology Exchange</a>,
 October 6, 2015.
-<li><a href="http://www.slideshare.net/jbasney/cilogon-20-at-refeds-30">CILogon 2.0</a>,
+<li><a href="https://www.slideshare.net/jbasney/cilogon-20-at-refeds-30">CILogon 2.0</a>,
 <a href="https://refeds.org/meetings/30th-meeting-oct-2015">REFEDS</a>,
 October 4, 2015.
 <li>Case Studies - InCommon Certificate Service,
 <a href="http://www.incommon.org/iamonline">IAM Online</a>,
 July 8, 2015.
-<li><a href="http://www.slideshare.net/jbasney/cilogon-globusworld2015">CILogon and InCommon: Technical Update</a>,
+<li><a href="https://www.slideshare.net/jbasney/cilogon-globusworld2015">CILogon and InCommon: Technical Update</a>,
 <a href="https://www.globusworld.org/">GlobusWorld</a>,
 April 14, 2015.
 <li>CILogon,
 Internet2 Technology Exchange,
 October 2014.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20141030-basney-cilogon.pdf">[pdf]</a>
+<a href="20141030-basney-cilogon.pdf">[pdf]</a>
 <li>CILogon-HA: September 2014 Update,
 DOE PI Meeting,
 September 2014.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/2014-09-cilogon-ha.pdf">[pdf]</a>
+<a href="2014-09-cilogon-ha.pdf">[pdf]</a>
 <li>Good Federation Citizenship,
 <a href="http://www.incommon.org/iamonline">IAM Online</a>,
 May 28, 2014.
 <li>CILogon,
 Middleware And Grid Interagency Coordination (MAGIC) meeting,
 November 20, 2013.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/sc13-magic-cilogon.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/sc13-magic-cilogon.pdf">[pdf]</a>
+<a href="sc13-magic-cilogon.pdf">[pdf]</a>
 <li>InCommon & CILogon: Federated Identities Supporting Science,
 RedCLARA Federations Virtual Day,
 Jun 19, 2013.
-<a href="2013-06-basney-redclara.pptx">[pptx]</a>
 <a href="2013-06-basney-redclara.pdf">[pdf]</a>
 <li>TAC Interfederation Subgroup Update,
 <a href="https://spaces.internet2.edu/display/InCCollaborate/Virtual+Working+Groups+-+May+20-21%2C+2013">InCommon Virtual Working Groups</a>,
@@ -870,26 +876,22 @@ February 22, 2013.
 Online and Beyond,
 <a href="http://www.globusworld.org/">GlobusWORLD</a>,
 April 17, 2013.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/basney-GW13.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/basney-GW13.pdf">[pdf]</a>
+<a href="basney-GW13.pdf">[pdf]</a>
 <a href="https://www.youtube.com/watch?v=QCca-VsY_18">[video]</a>
 <li>CILogon-HA: Higher Assurance Federated Identities for DOE Science,
 <a href="https://indico.bnl.gov/conferenceDisplay.py?confId=566">DOE
 NGNS PI Meeting</a>,
 March 19, 2013.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/2013-03-cilogon-ha.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/2013-03-cilogon-ha.pptx">[pdf]</a>
+<a href="2013-03-cilogon-ha.pdf">[pdf]</a>
 <li>CILogon and Social Identities,
 <a href="http://www.incommon.org/iamonline">IAM Online</a>,
 December 12, 2012.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20121212-cilogon.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20121212-cilogon.pdf">[pdf]</a>
+<a href="20121212-cilogon.pdf">[pdf]</a>
 <li>
 CILogon,
 Middleware And Grid Interagency Coordination (MAGIC) meeting,
 November 14, 2012.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/sc12-magic-cilogon-basney.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/sc12-magic-cilogon-basney.pdf">[pdf]</a>
+<a href="sc12-magic-cilogon-basney.pdf">[pdf]</a>
 <li>
 <a href="https://www.xsede.org/web/xsede12">XSEDE12</a> Panel:
 Security for Science Gateways and Campus Bridging,
@@ -919,13 +921,11 @@ November 2-3, 2011.
 <li>CILogon: Federating Identities for Researchers,
 <a href="http://events.internet2.edu/2011/fall-mm/">Internet2 Member Meeting</a>,
 October 6, 2011.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20111006-basney-cilogon.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20111006-basney-cilogon.pdf">[pdf]</a>
+<a href="20111006-basney-cilogon.pdf">[pdf]</a>
 <li>CILogon: Network Roaming with Certificates,
 <a href="http://events.internet2.edu/2011/fall-mm/">Internet2 Member Meeting</a>,
 October 3, 2011.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20111003-basney-cilogon.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20111003-basney-cilogon.pdf">[pdf]</a>
+<a href="20111003-basney-cilogon.pdf">[pdf]</a>
 <li>CILogon, OAuth, and Science Gateway Security,
 CyberGIS Conference Call,
 September 15, 2011.
