--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Please contact me for a free copy of any publication listed below.
   Causes of Authentication Failures Using a SAML and OIDC
   Observatory," IEEE 6th International Conference on Dependability in
   Sensor, Cloud and Big Data Systems and Applications
-  (<a href="http://www.ieee-cybermatics.org/2020/dependsys/">DependSys</a>),
+  (DependSys),
   December 2020.
   <a href="https://doi.org/10.1109/DependSys51298.2020.00026">https://doi.org/10.1109/DependSys51298.2020.00026</a>
   <a href="https://github.com/cilogon/DependSys2020">[data]</a>
@@ -186,7 +186,7 @@ Gaithersburg, MD, April 2010.
 Mehran Ahsant and Jim Basney, 
 "Workflows in Dynamic and Restricted Delegation," 
 Journal of Information System Security
-(<a href="http://www.jissec.org/Contents/V5/N4/V5N4-Ahsant.html">JISSec</a>),
+(<a href="https://www.jissec.org/Contents/V5/N4/V5N4-Ahsant.html">JISSec</a>),
 Volume 5, Number 4 (2009),
 Pages 3-26,
 ISSN 1551-0123.
@@ -253,7 +253,7 @@ to Intrusion Detections,"
 High Performance Computation Conference (HPCC 2007), 
 Sept 26-28, 2007. Houston, TX.
 <a href="https://doi.org/10.1007/978-3-540-75444-2_29">https://doi.org/10.1007/978-3-540-75444-2_29</a>
-<a href="http://www.cs.virginia.edu/~humphrey/papers/ANDREA_GT4_HPCC2007.pdf">[pdf]</a>
+<a href="ANDREA_GT4_HPCC2007.pdf">[pdf]</a>
 <li>
 Z. Hill, J. Rowanhill, A. Nguyen-Tuong, J. Basney, G. Wasson,
 J. Knight and M. Humphrey, 
@@ -329,7 +329,7 @@ D. M. Freemon,
 "CyberInfrastructure for the Analysis of Ecological Acoustic Sensor
 Data: A Use Case Study in Grid Deployment,"
 Challenges of Large Applications in Distributed Environments
-(<a href="http://www-unix.mcs.anl.gov/~bair/CLADE2006/">CLADE 2006</a>)
+(CLADE 2006)
 Workshop (associated with the 15th International Symposium on High Performance Distributed Computing),
 Paris, France, June 19, 2006.
 <a href="https://doi.org/10.1007/s10586-007-0033-8">https://doi.org/10.1007/s10586-007-0033-8</a>
@@ -367,7 +367,7 @@ Seattle, WA, November 13-14, 2005.
 <a href="proxy-renewal.pdf">[pdf]</a>
 <li>Bruce Beckles, Von Welch, and Jim Basney,
 "Mechanisms for Increasing the Usability of Grid Security,"
-<a href="http://www.sciencedirect.com/science/journal/10715819">International Journal of Human Computer Studies</a>,
+International Journal of Human Computer Studies,
 Special Issue on HCI Research in Privacy and Security,
 Volume 63, Issues 1-2, July 2005, pages 74-101.
 <a href="https://doi.org/10.1016/j.ijhcs.2005.04.017">https://doi.org/10.1016/j.ijhcs.2005.04.017</a>
@@ -394,7 +394,7 @@ Integration of Pubcookie and MyProxy,"
 2005 International Conference on Computational Science (ICCS 2005), 
 Emory University, Atlanta, GA, May 22-25, 2005.
 <a href="https://doi.org/10.1007/11428831_62">https://doi.org/10.1007/11428831_62</a>
-<a href="http://www.cs.virginia.edu/~humphrey/papers/PubcookieMyproxy.pdf">[pdf]</a>
+<a href="PubcookieMyproxy.pdf">[pdf]</a>
 <li>A. Grimshaw, M. Humphrey, J.C. Knight, A. Nguyen-Tuong, J. Rowanhill, G.
 Wasson, and J. Basney,
 "The Development of Dependable and Survivable Grids,"
@@ -402,7 +402,7 @@ Wasson, and J. Basney,
 International Conference on Computational Science). 
 Emory University, Atlanta, GA, May 22-25, 2005.
 <a href="https://doi.org/10.1007/11428848_94">https://doi.org/10.1007/11428848_94</a>
-<a href="http://www.cs.virginia.edu/~humphrey/papers/DevelopmentDependableSurvivableGrids.pdf">[pdf]</a>
+<a href="DevelopmentDependableSurvivableGrids.pdf">[pdf]</a>
 <li>Himanshu Khurana, Rafael Bonilla, Adam Slagell, Raja Afandi,
 Hyung-Seok Hahm, and Jim Basney, 
 "Scalable Group Key Management with Partially Trusted Controllers,"
@@ -421,20 +421,20 @@ Technical Report YCS-2004-380.
 <li>Mehran Ahsant, Jim Basney, and Olle Mulmo,
 "Grid Delegation Protocol," 
 Proceedings of the 
-<a href="http://www.e-science.ox.ac.uk/events/security-workshop/">Workshop on Grid Security Practice and Experience</a>
+Workshop on Grid Security Practice and Experience
 (UK e-Science Security Task Force), Oxford, 8-9 July 2004.
 Published as: University of York Department of Computer Science
 Technical Report 
-<a href="http://www.cs.york.ac.uk/ftpdir/reports/YCS-2004-380.pdf">YCS-2004-380</a>.
+YCS-2004-380.
 <a href="Grid-Delegation-Protocol.pdf">[pdf]</a>
 <li>Jim Jokl, Jim Basney, and Marty Humphrey,
 "Experiences using Bridge CAs for Grids,"
 Proceedings of the 
-<a href="http://www.e-science.ox.ac.uk/events/security-workshop/">Workshop on Grid Security Practice and Experience</a>
+Workshop on Grid Security Practice and Experience
 (UK e-Science Security Task Force), Oxford, 8-9 July 2004.
 Published as: University of York Department of Computer Science
 Technical Report 
-<a href="http://www.cs.york.ac.uk/ftpdir/reports/YCS-2004-380.pdf">YCS-2004-380</a>.
+YCS-2004-380.
 <a href="BridgeCAGridSecWorkshop2004.pdf">[pdf]</a>
 <li>Jim Basney, Wolfgang Nejdl, Daniel Olmedilla, Von Welch, and
 Marianne Winslett, "Negotiating Trust on the Grid,"
