--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ July 22, 2001.
   Symposium on Grids &amp; Clouds (ISGC),
   April 4, 2019.
 <li><CILogon,
-    SciTokens and Grid Community Toolkits</a>,
+    SciTokens and Grid Community Toolkits,
   IGTF
   All-Hands Meeting,
   April 1, 2019.
