--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@ July 22, 2001.
   International
   Symposium on Grids &amp; Clouds (ISGC),
   April 4, 2019.
-<li><CILogon,
+<li>CILogon,
     SciTokens and Grid Community Toolkits,
   IGTF
   All-Hands Meeting,
