--- a/index.html
+++ b/index.html
@@ -1137,8 +1137,7 @@ November 2012.
 <li>CIlogon: Federated Logon to NSF Cyberinfrastructure,
 <a href="http://events.internet2.edu/2010/spring-mm/">Internet2 Member Meeting</a>,
 April 2010.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/cilogon-poster-201004.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/cilogon-poster-201004.pdf">[pdf]</a>
+<a href="cilogon-poster-201004.pdf">[pdf]</a>
 <li>Federated Logon to TeraGrid,
 <a href="http://events.internet2.edu/2010/spring-mm/">Internet2 Member Meeting</a>,
 April 2010.
