--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@ October 6, 2015.
 <a href="https://refeds.org/meetings/30th-meeting-oct-2015">REFEDS</a>,
 October 4, 2015.
 <li>Case Studies - InCommon Certificate Service,
-<a href="http://www.incommon.org/iamonline">IAM Online</a>,
+<a href="https://www.incommon.org/academy/webinars/">IAM Online</a>,
 July 8, 2015.
 <li><a href="https://www.slideshare.net/jbasney/cilogon-globusworld2015">CILogon and InCommon: Technical Update</a>,
 <a href="https://www.globusworld.org/">GlobusWorld</a>,
@@ -855,7 +855,7 @@ DOE PI Meeting,
 September 2014.
 <a href="2014-09-cilogon-ha.pdf">[pdf]</a>
 <li>Good Federation Citizenship,
-<a href="http://www.incommon.org/iamonline">IAM Online</a>,
+<a href="https://www.incommon.org/academy/webinars/">IAM Online</a>,
 May 28, 2014.
 <li>CILogon,
 Middleware And Grid Interagency Coordination (MAGIC) meeting,
@@ -874,7 +874,7 @@ May 20, 2013.
 February 22, 2013.
 <li>CILogon and OAuth for MyProxy: Federated Authentication to Globus
 Online and Beyond,
-<a href="http://www.globusworld.org/">GlobusWORLD</a>,
+<a href="https://www.globusworld.org/">GlobusWORLD</a>,
 April 17, 2013.
 <a href="basney-GW13.pdf">[pdf]</a>
 <a href="https://www.youtube.com/watch?v=QCca-VsY_18">[video]</a>
@@ -884,7 +884,7 @@ NGNS PI Meeting</a>,
 March 19, 2013.
 <a href="2013-03-cilogon-ha.pdf">[pdf]</a>
 <li>CILogon and Social Identities,
-<a href="http://www.incommon.org/iamonline">IAM Online</a>,
+<a href="https://www.incommon.org/academy/webinars/">IAM Online</a>,
 December 12, 2012.
 <a href="20121212-cilogon.pdf">[pdf]</a>
 <li>
@@ -919,11 +919,11 @@ November 2-3, 2011.
 <a href="201111-fedidm-basney.pptx">[pptx]</a>
 <a href="201111-fedidm-basney.pdf">[pdf]</a>
 <li>CILogon: Federating Identities for Researchers,
-<a href="http://events.internet2.edu/2011/fall-mm/">Internet2 Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2011-fall-mm/">Internet2 Member Meeting</a>,
 October 6, 2011.
 <a href="20111006-basney-cilogon.pdf">[pdf]</a>
 <li>CILogon: Network Roaming with Certificates,
-<a href="http://events.internet2.edu/2011/fall-mm/">Internet2 Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2011-fall-mm/">Internet2 Member Meeting</a>,
 October 3, 2011.
 <a href="20111003-basney-cilogon.pdf">[pdf]</a>
 <li>CILogon, OAuth, and Science Gateway Security,
@@ -947,13 +947,13 @@ May 25, 2011.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20110525-cilogon-acamp.pptx">[pptx]</a>
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20110525-cilogon-acamp.pdf">[pdf]</a>
 <li>CILogon and Globus Toolkit,
-<a href="http://globusworld.org/">GlobusWORLD</a>,
+<a href="https://globusworld.org/">GlobusWORLD</a>,
 April 11, 2011.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/CILogon-GlobusWORLD2011.pptx">[pptx]</a>
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/CILogon-GlobusWORLD2011.pdf">[pdf]</a>
 <li>Secure Access to Research Infrastructure via the InCommon
 Federation,
-<a href="http://www.nd.edu/~dthain/scw2011/">University of Notre Dame Scientific Computing Workshop</a>,
+University of Notre Dame Scientific Computing Workshop,
 Feburary 23, 2011.
 <a href="20110223-cilogon.pptx">[pptx]</a>
 <a href="20110223-cilogon.pdf">[pdf]</a>
@@ -962,12 +962,12 @@ January 18, 2011.
 <a href="20110118-InCommonTGChampions.pptx">[pptx]</a>
 <a href="20110118-InCommonTGChampions.pdf">[pdf]</a>
 <li>CILogon: Bridges between Campus and National Cyberinfrastructure,
-<a href="http://events.internet2.edu/2010/fall-mm/">Internet2 Fall Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2010-fall-mm/">Internet2 Fall Member Meeting</a>,
 November 2, 2010.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-bridges-basney.pptx">[pptx]</a>
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-bridges-basney.pdf">[pdf]</a>
 <li>CILogon: Federating Non-Web Apps,
-<a href="http://events.internet2.edu/2010/fall-mm/">Internet2 Fall Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2010-fall-mm/">Internet2 Fall Member Meeting</a>,
 November 2, 2010.
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-nonwebapps-basney.pptx">[pptx]</a>
 <a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-nonwebapps-basney.pdf">[pdf]</a>
@@ -984,16 +984,16 @@ June 22, 2010.
 <li>Federated Login to NSF CyberInfrastructure,
 Internet2 Applications, Middleware & Services Advisory Council
 (AMSAC) Session,
-<a href="http://events.internet2.edu/2010/spring-mm/">Internet2 Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2010-spring-mm/">Internet2 Member Meeting</a>,
 April 26, 2010.
 <a href="20100426-cilogon-i2amsac.pptx">[pptx]</a>
 <li>CILogon Project Overview,
-<a href="http://www.cilogon.org/fall-2009-workshop">CILogon Fall 2009 Workshop</a>,
+<a href="https://www.cilogon.org/fall-2009-workshop">CILogon Fall 2009 Workshop</a>,
 September 29, 2009.
-<a href="http://www.cilogon.org/fall-2009-workshop/agenda/20090929-cilogon-overview.pptx">[pptx]</a>
-<a href="http://www.cilogon.org/fall-2009-workshop/agenda/20090929-cilogon-overview.pdf">[pdf]</a>
+<a href="https://www.cilogon.org/fall-2009-workshop/agenda/20090929-cilogon-overview.pptx">[pptx]</a>
+<a href="https://www.cilogon.org/fall-2009-workshop/agenda/20090929-cilogon-overview.pdf">[pdf]</a>
 <li>Leveraging the InCommon Federation to access the NSF TeraGrid,
-<a href="http://events.internet2.edu/2008/fall-mm/">Internet2 Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2008-fall-mm/">Internet2 Member Meeting</a>,
 October 15, 2008.
 <a href="basney-fall2008i2mm.ppt">[ppt]</a>
 <a href="basney-fall2008i2mm.pdf">[pdf]</a>
@@ -1004,7 +1004,7 @@ September 10, 2008.
 <a href="ahm2008.pdf">[abstract]</a>
 <a href="teragrid-gateways-ahm08.ppt">[ppt]</a>
 <li>Building and Maintaining a Trustworthy Grid,
-<a href="http://www.bluefern.canterbury.ac.nz/events/hprs/speakers.shtml">University of Canterbury eResearch Symposium</a>,
+University of Canterbury eResearch Symposium,
 August 4, 2008.
 <a href="basney-canterbury-08.ppt">[ppt]</a>
 <a href="basney-canterbury-08.pdf">[pdf]</a>
@@ -1025,17 +1025,17 @@ TeraGrid '06,
 June 14, 2006.
 <a href="MyProxy-TG06.ppt">[ppt]</a>
 <li>MyProxy: A Multi-Purpose Grid Authentication Service,
-<a href="http://wcga06.lncc.br/">Workshop on Computational Grids and
-Applications (WCGA)</a>,
+Workshop on Computational Grids and
+Applications (WCGA),
 June 2, 2006.
 <a href="MyProxy-WCGA06.ppt">[ppt]</a>
 <li>Managing Credentials with MyProxy,
-<a href="http://sc05.supercomputing.org/">SC05</a>,
+SC05,
 November 12-18, 2005.
 <a href="MyProxy-SC05.ppt">[ppt]</a>
 <a href="MyProxy-SC05.pdf">[pdf]</a>
 <li>Integrating MyProxy with Site Authentication,
-<a href="http://www.ggf.org/GGF15/ggf_events_schedule_MultiSite.htm">Leveraging Site Infrastructure for Multi-Site Grids</a>,
+Leveraging Site Infrastructure for Multi-Site Grids,
 GGF15 Workshop, 
 October 3, 2005.
 <a href="MyProxy-GGF15.ppt">[ppt]</a>
@@ -1052,28 +1052,28 @@ NCSA Cyberinfrastructure Seminar Series, September 6, 2005.
 NCSA Private Sector Program Annual Meeting,
 May 17, 2005.
 <li>Using the MyProxy Online Credential Repository,
-<a href="http://www.globusworld.org/">GlobusWORLD</a>,
+<a href="https://www.globusworld.org/">GlobusWORLD</a>,
 February 9, 2005.
 <a href="MyProxy-GW05.ppt">[ppt]</a>
 <a href="MyProxy-GW05.pdf">[pdf]</a>
 <li>Using the MyProxy Online Credential Repository,
-<a href="http://wcga05.lncc.br/e/program.html">LNCC Workshop on
-Computational Grids and Applications</a>,
+LNCC Workshop on
+Computational Grids and Applications,
 February 1, 2005.
 <li>Credential Management Services and the PKI Testbed,
-<a href="http://www.ncassr.org/">NCASSR</a>
-<a href="http://www.pnl.gov/">PNNL</a> Visit,
+NCASSR
+PNNL Visit,
 January 13, 2005.
 <a href="BasneyPNNL0501.ppt">[ppt]</a>
 <a href="BasneyPNNL0501.pdf">[pdf]</a>
 <li>The MyProxy Online Credential Repository,
-<a href="http://www.sc-conference.org/sc2004/">SC04</a>,
+SC04,
 November 9, 2004.
 <a href="MyProxy-SC04.ppt">[ppt]</a>
 <a href="MyProxy-SC04.pdf">[pdf]</a>
 <li>Managing Grid Credentials,
-<a href="http://www.grids-center.org/train/june2004.asp">GRIDS
-Targeted Communities Workshop</a>,
+GRIDS
+Targeted Communities Workshop,
 July 1, 2004.
 <a href="GRIDS-2004-Basney.pdf">[pdf]</a>
 <li>MyProxy NMI Integration,
@@ -1082,8 +1082,8 @@ February 19, 2004.
 <a href="nsf-sci-pi-myproxy.ppt">[ppt]</a>
 <a href="nsf-sci-pi-myproxy.pdf">[pdf]</a>
 <li>Middleware for Production Grids,
-<a href="http://virtual01.lncc.br/wcga04/index-e.html">LNCC Workshop
-on Computational Grids and Applications</a>,
+LNCC Workshop
+on Computational Grids and Applications,
 February 3, 2004.
 <a href="brazil-04-basney.ppt">[ppt]</a>
 <a href="brazil-04-basney.pdf">[pdf]</a>
@@ -1103,12 +1103,12 @@ July 11, 2003.
 <a href="ncassr-20030611.ppt">[ppt]</a>
 <a href="ncassr-20030611.pdf">[pdf]</a>
 <li>NCSA-IPG Collaboration Projects Overview.
-<a href="http://www.ipg.nasa.gov/workshops/workshop2003/">NASA IPG
-Workshop</a>, February 6, 2003.
+NASA IPG
+Workshop, February 6, 2003.
 <a href="ncsa-ipg-fy02.ppt">[ppt]</a>
 <a href="ncsa-ipg-fy02.pdf">[pdf]</a>
 <li>Credential Management in the Grid Security Infrastructure,
-<a href="http://www.globusworld.org">GlobusWorld</a> Grid Security
+<a href="https://www.globusworld.org/">GlobusWorld</a> Grid Security
 Workshop, January 16, 2003.
 <a href="globusworld-2003-credmgmt.ppt">[ppt]</a>
 <a href="globusworld-2003-credmgmt.pdf">[pdf]</a>
@@ -1119,8 +1119,8 @@ Planning Workshop, July 16, 2002.
 <a href="myproxy-nmi-20020716.ppt">[ppt]</a>
 <a href="myproxy-nmi-20020716.pdf">[pdf]</a>
 <li>GSI Online Credential Retrieval Requirements.
-<a href="http://www.globalgridforum.org/Meetings/ggf4/">Fourth Global
-Grid Forum Workshop</a>, February 18, 2002.
+Fourth Global
+Grid Forum Workshop, February 18, 2002.
 <a href="ggf4-gsi-ocr-requirements.ppt">[ppt]</a>
 <a href="ggf4-gsi-ocr-requirements.pdf">[pdf]</a>
 <li>MyProxy: An Online Credential Repository for the Grid.
@@ -1135,16 +1135,16 @@ NSF Secure and Trustworthy Cyberspace (SaTC) Principal Investigators' Meeting,
 November 2012.
 <a href="2012-SaTC-basney-poster.pdf">[pdf]</a>
 <li>CIlogon: Federated Logon to NSF Cyberinfrastructure,
-<a href="http://events.internet2.edu/2010/spring-mm/">Internet2 Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2010-spring-mm/">Internet2 Member Meeting</a>,
 April 2010.
 <a href="cilogon-poster-201004.pdf">[pdf]</a>
 <li>Federated Logon to TeraGrid,
-<a href="http://events.internet2.edu/2010/spring-mm/">Internet2 Member Meeting</a>,
+<a href="https://meetings.internet2.edu/2010-spring-mm/">Internet2 Member Meeting</a>,
 April 2010.
 <a href="tgfed-poster-201004.pptx">[pptx]</a>
 <a href="tgfed-poster-201004.pdf">[pdf]</a>
 <li>MyProxy Online Credential Repository.
-<a href="http://www.globusworld.org">GlobusWorld</a>, January 13, 2003.
+<a href="https://www.globusworld.org/">GlobusWorld</a>, January 13, 2003.
 <a href="myproxy-poster-200301.pdf">[pdf]</a>
 <li>NCSA Grid Technologies Group.
 Alliance All-Hands Meeting, 
@@ -1193,7 +1193,7 @@ Cyberinfrastructure.
 Duration: January 2016 through December 2018.
 Amount: $4,999,709.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1547272">1547272</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1547272">1547272</a>.
 <a href="https://www.trustedci.org/s/CCoE-Proposal-2015.pdf">[pdf]</a>
 <li>PI: James Basney. Co-PI: Scott Koranda.
 Title: CICI: Secure Data Architecture: CILogon 2.0 - An Integrated
@@ -1201,7 +1201,7 @@ Identity and Access Management Platform for Science.
 Duration: January 2016 through December 2018.
 Amount: $499,973.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1547268">1547268</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1547268">1547268</a>.
 <a href="https://drive.google.com/file/d/0B--oThVeU4I-REJtRDFaem9qZnM/view?usp=sharing">[pdf]</a>
 <li>PI: Jill Gemmill,
 Co-PIs: James Basney, James Bottum, Kuang-Ching Wang, Steven Corbato.
@@ -1210,7 +1210,7 @@ and Access Management for Self-Managed Collaboration.
 Duration: October 2014 through September 2016.
 Amount: $291,040.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1440609">1440609</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1440609">1440609</a>.
 <li>PI: Miron Livny, Co-PIs: Jim Basney, Barton Miller, Von Welch.
 Title: Continuous Software Assurance through a National Marketplace.
 Duration: September 2012 through September 2017.
@@ -1225,7 +1225,7 @@ Title: Center for Trustworthy Scientific Cyberinfrastructure.
 Duration: October 2012 through September 2015.
 Amount: $4,297,212.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1234408">1234408</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1234408">1234408</a>.
 <li>PI: James Basney.
 Title: CILogon-HA: Higher Assurance Federated Identities for DOE Science.
 Duration: September 2012 through August 2015.
@@ -1235,38 +1235,38 @@ Source: Department of Energy award number DE-SC0008597.
 Title: SAML Enhanced Client GSS-API Implementation.
 Date: December 2011.
 Amount: $75,000.
-Source: <a href="http://www.isoc.org/">Internet Society</a> (gift).
+Source: <a href="https://www.internetsociety.org/">Internet Society</a> (gift).
 <li>PI: James Basney, Co-PIs: Marlon Pierce and Rion Dooley.
 Title: SDCI Sec: Distributed Web Security for Science Gateways.
 Duration: August 2011 through July 2015.
 Amount: $948,821.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1127210">1127210</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1127210">1127210</a>.
 <li>PI: Randal Butler, Co-PIs: Douglas Pearson, James Basney, William Barnett.
 Title: Scientific Software Security Innovation Institute (S3I2).
 Duration: August 2010 through July 2012.
 Amount: $49,862.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1043843">1043843</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1043843">1043843</a>.
 <li>PI: Von Welch, Co-PIs: Randal Butler and James Basney.
 Title: A Cyber Identity Infrastructure for National Science.
 Duration: September 2009 through August 2013.
 Amount: $1,757,640.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0943633">0943633</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0943633">0943633</a>.
 <li>PI: James Basney, Co-PIs: Randal Butler and Von Welch.
 Title: CILogon: Secure Access to National-Scale CyberInfrastructure.
 Duration: June 2009 through May 2011.
 Amount: $399,837.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0850557">0850557</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0850557">0850557</a>.
 <li>PI: James Basney, Co-PI: Marty Humphrey.
 Title: Integration of the MyProxy Online Credential Repository into the NSF
 Middleware Initiative Software Infrastructure.
 Duration: July 2002 through June 2005.
 Amount: $598,343.
 Source: National Science Foundation award number
-<a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0222571">0222571</a>.
+<a href="https://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0222571">0222571</a>.
 </ul>
 <h2 id="service">Service</h2>
 <ul>
