--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ July 2013, San Diego, CA.
 <!--
 <a href="cilogon-xsede13.pdf">[pdf]</a>
 -->
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/basney-cilogon-xsede13.pdf">[slides]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/cilogon-poster-201307.pdf">[poster]</a>
+<a href="basney-cilogon-xsede13.pdf">[slides]</a>
+<a href="cilogon-poster-201307.pdf">[poster]</a>
 <li>Jim Basney, Rion Dooley, Jeff Gaynor, Suresh Marru, and Marlon Pierce,
 "Distributed Web Security for Science Gateways,"
 Gateway Computing Environments Workshop
@@ -934,48 +934,40 @@ September 15, 2011.
 <li>InCommon Federation Experiences: CILogon,
 InCommon CAMP,
 June 22, 2011.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/201106-cilogon-camp.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/201106-cilogon-camp.pdf">[pdf]</a>
+<a href="201106-cilogon-camp.pdf">[pdf]</a>
 <li>CILogon,
 CERN Federated identity system for scientific collaboration workshop,
 June 9, 2011.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/201106-cilogon-cern.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/201106-cilogon-cern.pdf">[pdf]</a>
+<a href="201106-cilogon-cern.pdf">[pdf]</a>
 <li>Federated Service Provider On-Boarding,
 InCommon ACAMP,
 May 25, 2011.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20110525-cilogon-acamp.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20110525-cilogon-acamp.pdf">[pdf]</a>
+<a href="20110525-cilogon-acamp.pdf">[pdf]</a>
 <li>CILogon and Globus Toolkit,
 <a href="https://globusworld.org/">GlobusWORLD</a>,
 April 11, 2011.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/CILogon-GlobusWORLD2011.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/CILogon-GlobusWORLD2011.pdf">[pdf]</a>
+<a href="CILogon-GlobusWORLD2011.pdf">[pdf]</a>
 <li>Secure Access to Research Infrastructure via the InCommon
 Federation,
 University of Notre Dame Scientific Computing Workshop,
 Feburary 23, 2011.
-<a href="20110223-cilogon.pptx">[pptx]</a>
 <a href="20110223-cilogon.pdf">[pdf]</a>
 <li>InCommon and TeraGrid Campus Champions,
 January 18, 2011.
-<a href="20110118-InCommonTGChampions.pptx">[pptx]</a>
 <a href="20110118-InCommonTGChampions.pdf">[pdf]</a>
 <li>CILogon: Bridges between Campus and National Cyberinfrastructure,
 <a href="https://meetings.internet2.edu/2010-fall-mm/">Internet2 Fall Member Meeting</a>,
 November 2, 2010.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-bridges-basney.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-bridges-basney.pdf">[pdf]</a>
+<a href="20101102-bridges-basney.pdf">[pdf]</a>
 <li>CILogon: Federating Non-Web Apps,
 <a href="https://meetings.internet2.edu/2010-fall-mm/">Internet2 Fall Member Meeting</a>,
 November 2, 2010.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-nonwebapps-basney.pptx">[pptx]</a>
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101102-nonwebapps-basney.pdf">[pdf]</a>
+<a href="20101102-nonwebapps-basney.pdf">[pdf]</a>
 <li>CILogon: Campus Authentication to CyberInfrastructure,
 TAGPMA 
 Symposium on Authentication Technologies for Research and Education,
 October 4, 2010.
-<a href="https://sites.google.com/a/cilogon.org/www-classic/docs/20101004.pptx">[pptx]</a>
+<a href="20101004.pptx">[pptx]</a>
 <li>Federated Incident Response,
 InCommon Campus Authentication & Middlware Planning
 (<a href="https://spaces.internet2.edu/display/CAMPJune2010">CAMP</a>),
@@ -990,8 +982,7 @@ April 26, 2010.
 <li>CILogon Project Overview,
 <a href="https://www.cilogon.org/fall-2009-workshop">CILogon Fall 2009 Workshop</a>,
 September 29, 2009.
-<a href="https://www.cilogon.org/fall-2009-workshop/agenda/20090929-cilogon-overview.pptx">[pptx]</a>
-<a href="https://www.cilogon.org/fall-2009-workshop/agenda/20090929-cilogon-overview.pdf">[pdf]</a>
+<a href="20090929-cilogon-overview.pdf">[pdf]</a>
 <li>Leveraging the InCommon Federation to access the NSF TeraGrid,
 <a href="https://meetings.internet2.edu/2008-fall-mm/">Internet2 Member Meeting</a>,
 October 15, 2008.
